--- a/LAB1_semester2.vcxproj.filters
+++ b/LAB1_semester2.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="LAB1_semester2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="strings_algorithms.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="strings_algorithms.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
