--- a/LAB1_semester2.vcxproj.filters
+++ b/LAB1_semester2.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="task2\rmq.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="task2\lca.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="strings_algorithms.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="task2\rmq.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="task2\lca.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
