--- a/LAB1_semester2.vcxproj.filters
+++ b/LAB1_semester2.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="task2\code.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="task3\code.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
