--- a/LAB1_semester2.vcxproj.filters
+++ b/LAB1_semester2.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="task10\code.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="deps\input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
